[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/help_tooltip/help_tooltip_manager.gd" id="1_tooltip"]

[node name="HelpTooltipManager" type="CanvasLayer"]
layer = 100
script = ExtResource("1_tooltip")

[node name="TooltipPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(280, 80)
offset_right = 280.0
offset_bottom = 80.0

[node name="MarginContainer" type="MarginContainer" parent="TooltipPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="TooltipPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
text = "帮助标题"

[node name="ContentLabel" type="RichTextLabel" parent="TooltipPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(260, 50)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "帮助内容..."
fit_content = true
